update inquinamento. Join dei 2 dataframe

--- a/Scripts/Inquinamento.ipynb
+++ b/Scripts/Inquinamento.ipynb
@@ -10,23 +10,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 93,
    "id": "af7f82f9",
    "metadata": {},
    "outputs": [],
    "source": [
     "from datetime import datetime, timedelta\n",
     "import json\n",
+    "from shapely import Point\n",
     "\n",
     "import requests\n",
     "from bs4 import BeautifulSoup, Tag\n",
     "from tqdm import tqdm\n",
-    "import pandas as pd"
+    "import geopandas as gpd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 74,
    "id": "c89dc7cd",
    "metadata": {},
    "outputs": [],
@@ -216,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 49,
    "id": "5bf3eb56",
    "metadata": {},
    "outputs": [],
@@ -232,7 +233,7 @@
     "            valore = None\n",
     "    return valore\n",
     "\n",
-    "misurazione = pd.read_csv(PATH_MISURAZIONI_STAGING)\n",
+    "misurazione = gpd.read_file(PATH_MISURAZIONI_STAGING)\n",
     "\n",
     "misurazione[\"valore\"] = misurazione[\"valore\"].apply(lambda_valore)\n",
     "misurazione = misurazione[misurazione[\"valore\"].notna()]"
@@ -240,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 51,
    "id": "7e52de72",
    "metadata": {},
    "outputs": [],
@@ -258,20 +259,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 53,
    "id": "1755bee8",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Nessuna pulizia necessaria al momento. Carico direttamente.\n",
     "\n",
-    "pd.read_csv(PATH_BOLLETTINO_STAGING).to_csv(PATH_BOLLETTINO_CLEAN, index=False)\n",
+    "gpd.read_file(PATH_BOLLETTINO_STAGING).to_csv(PATH_BOLLETTINO_CLEAN, encoding='latin',index=False)\n",
     "\n",
-    "pd.read_csv(PATH_STAZIONI_RAW).to_csv(PATH_STAZIONI_CLEAN, index=False)\n",
+    "gpd.read_file(PATH_STAZIONI_RAW).to_csv(PATH_STAZIONI_CLEAN, encoding='latin', index=False)\n",
     "\n",
-    "pd.read_csv(PATH_INQUINANTI_RAW).to_csv(PATH_INQUINANTI_CLEAN, index=False)\n",
+    "gpd.read_file(PATH_INQUINANTI_RAW).to_csv(PATH_INQUINANTI_CLEAN, encoding='latin', index=False)\n",
     "\n",
-    "pd.read_csv(PATH_SOGLIE_RAW).to_csv(PATH_SOGLIE_CLEAN, index=False)"
+    "gpd.read_file(PATH_SOGLIE_RAW).to_csv(PATH_SOGLIE_CLEAN, encoding='latin', index=False)"
    ]
   },
   {
@@ -284,19 +285,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "id": "ec1dfc77",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_tabella_media_inquinanti(id_inquinante:int, nome_valore:str) -> pd.DataFrame:\n",
+    "def get_tabella_media_inquinanti(id_inquinante:int, nome_valore:str):\n",
     "    \n",
-    "    inquinanti = pd.read_csv(PATH_INQUINANTI_CLEAN)\n",
-    "    stazioni = pd.read_csv(PATH_STAZIONI_CLEAN)\n",
-    "    misurazioni = pd.read_csv(PATH_MISURAZIONI_CLEAN)\n",
+    "    inquinanti = gpd.pd.read_csv(PATH_INQUINANTI_CLEAN, encoding=\"latin\")\n",
+    "    stazioni = gpd.pd.read_csv(PATH_STAZIONI_CLEAN, encoding=\"latin\")\n",
+    "    misurazioni = gpd.pd.read_csv(PATH_MISURAZIONI_CLEAN, encoding=\"latin\")\n",
     "    misurazioni = misurazioni.rename(columns={\"valore\": nome_valore})\n",
-    "    bollettino = pd.read_csv(PATH_BOLLETTINO_CLEAN)\n",
-    "    bollettino[\"data\"] = pd.to_datetime(bollettino[\"data\"])\n",
+    "    bollettino = gpd.pd.read_csv(PATH_BOLLETTINO_CLEAN, encoding=\"latin\")\n",
+    "    bollettino[\"data\"] = gpd.pd.to_datetime(bollettino[\"data\"])\n",
     "\n",
     "    df = misurazioni[misurazioni[\"id_inquinante\"] == id_inquinante]\n",
     "    df = df.merge(inquinanti, on=\"id_inquinante\", how=\"left\")\n",
@@ -304,63 +305,27 @@
     "    df = df.merge(stazioni, on=\"id_stazione\", how=\"left\", suffixes=(\"_pm10\", \"_stazione\"))\n",
     "    colonne = [nome_valore, \"data\", \"simbolo\", \"nome_stazione\", \"latitude\", \"longitute\"]\n",
     "    df = df[colonne]\n",
-    "    \n",
-    "    print(df.tail())    # Perdo viale liguria da fixare\n",
+    "\n",
     "    df = df.groupby(\"nome_stazione\").mean(\"valore\").reset_index()\n",
-    "    print(df.head())\n",
     "    return df\n",
     "\n",
     "df_pm10 = get_tabella_media_inquinanti(2, \"valore_pm10\")\n",
     "df_pm25 = get_tabella_media_inquinanti(3, \"valore_pm25\")\n",
     "\n",
     "final_df = df_pm10.merge(df_pm25[[\"nome_stazione\", \"valore_pm25\"]], on=\"nome_stazione\", how=\"left\")\n",
-    "final_df = final_df[[\"valore_pm10\", \"valore_pm25\", \"nome_stazione\", \"latitude\", \"longitute\"]]\n",
-    "final_df.head()"
+    "final_df = final_df[[\"valore_pm10\", \"valore_pm25\", \"nome_stazione\", \"latitude\", \"longitute\"]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "4abafd57",
+   "execution_count": 83,
+   "id": "05b6a381",
    "metadata": {},
    "outputs": [],
    "source": [
-    "geojson = {\n",
-    "    \"type\": \"FeatureCollection\",\n",
-    "    \"name\": \"\",\n",
-    "    \"crs\": {\n",
-    "        \"type\": \"name\",\n",
-    "        \"properties\": {\n",
-    "            \"name\": \"urn:ogc:def:crs:EPSG::6707\"\n",
-    "        }\n",
-    "    },\n",
-    "    \"features\": []\n",
-    "}\n",
-    "geojson[\"name\"] = \"inquinamento-amat\"\n",
-    "for i in final_df.index:\n",
-    "    feature = {\n",
-    "        \"type\": \"Feature\",\n",
-    "        \"properties\": {},\n",
-    "        \"geometry\": {\n",
-    "            \"type\": \"\",\n",
-    "            \"coordinates\": []\n",
-    "            }\n",
-    "        }\n",
-    "    for j in final_df.columns:\n",
-    "        feature[\"properties\"][j] = None if pd.isna(final_df.at[i, j]) else final_df.at[i, j]\n",
-    "    feature[\"geometry\"][\"coordinates\"] = [final_df.at[i, \"longitute\"], final_df.at[i, \"latitude\"]]\n",
-    "    geojson[\"features\"].append(feature)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "10feaffa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"../Data/Clean/Inquinamento/Amat/inquinamento-amat_media_clean.geojson\", 'w') as file:\n",
-    "    json.dump(geojson, file, indent=4)"
+    "final_df[\"geometry\"] = final_df.apply(lambda row: Point(row[\"longitute\"], row[\"latitude\"]), axis=1)\n",
+    "PATH_INQUINANTI_AMAT_GEOJSON_CLEAN = \"../Data/Clean/Inquinamento/Amat/inquinamento-amat_media_clean.geojson\"\n",
+    "gpd.GeoDataFrame(final_df, geometry=\"geometry\", crs=\"EPSG:6707\").to_file(PATH_INQUINANTI_AMAT_GEOJSON_CLEAN, driver=\"GeoJSON\")"
    ]
   },
   {
@@ -510,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 66,
    "id": "7cd24381",
    "metadata": {},
    "outputs": [],
@@ -525,13 +490,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "id": "170c6076",
    "metadata": {},
    "outputs": [],
    "source": [
     "# RAW\n",
-    "PATH_INQUINAMENTO_INGESTION_RAW = \"../Data/Raw/Inquinamento/Airnet/inquinamento-airnet_ingestion_raw.geojson\"\n",
+    "PATH_INQUINAMENTO_INGESTION_RAW = \"../Data/Raw/Inquinamento/Airnet/inquinamento-airnet_media_raw.geojson\"\n",
     "\n",
     "# STAGING\n",
     "\n",
@@ -557,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 68,
    "id": "c6f47ae2",
    "metadata": {},
    "outputs": [],
@@ -578,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 69,
    "id": "78cac211",
    "metadata": {},
    "outputs": [],
@@ -625,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 70,
    "id": "f2598976",
    "metadata": {},
    "outputs": [
@@ -633,7 +598,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Scraping progress...: 100%|██████████| 365/365 [06:57<00:00,  1.14s/it]\n"
+      "Scraping progress...: 100%|██████████| 19/19 [01:29<00:00,  5.09s/it]"
      ]
     }
    ],
@@ -668,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 71,
    "id": "548c45d8",
    "metadata": {},
    "outputs": [],
@@ -695,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 72,
    "id": "f3e11d59",
    "metadata": {},
    "outputs": [],
@@ -726,13 +691,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 73,
    "id": "99e129f3",
    "metadata": {},
    "outputs": [],
    "source": [
     "with open(PATH_INQUINAMENTO_INGESTION_CLEAN, 'w') as file:\n",
     "    json.dump(geojson, file, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da54d657",
+   "metadata": {},
+   "source": [
+    "# Join dei 2 dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "8e37b0d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import geopandas as gpd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "bb84020e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PATH_INQUINAMENTO_JOINED_CLEAN = \"../Data/Clean/Inquinamento/inquinamento_media_clean.geojson\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd6ccb8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "airnet_json = gpd.read_file(PATH_INQUINAMENTO_INGESTION_CLEAN)\n",
+    "amat_json = gpd.read_file(PATH_INQUINANTI_AMAT_GEOJSON_CLEAN)\n",
+    "\n",
+    "amat_json = amat_json.rename(columns={\"valore_pm10\": \"pm10\", \"valore_pm25\": \"pm25\", \"nome_stazione\": \"name\"})\n",
+    "amat_json[\"longitudine\"] = amat_json.apply(lambda row: row[\"geometry\"].x, axis=1)\n",
+    "amat_json[\"latitudine\"] = amat_json.apply(lambda row: row[\"geometry\"].y, axis=1)\n",
+    "column = [\"name\", \"pm10\", \"pm25\", \"longitudine\", \"latitudine\", \"geometry\"]\n",
+    "amat_json = amat_json[column]\n",
+    "airnet_json = airnet_json[column]\n",
+    "\n",
+    "gdf_union = gpd.GeoDataFrame(gpd.pd.concat([airnet_json, amat_json], ignore_index=True))\n",
+    "gdf_union.to_file(PATH_INQUINAMENTO_JOINED_CLEAN, driver=\"GeoJSON\")"
    ]
   }
  ],
