--- a/Scripts/Impianti_sportivi.ipynb
+++ b/Scripts/Impianti_sportivi.ipynb
@@ -9,8 +9,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d6009c72",
+   "metadata": {},
+   "source": [
+    "Eliminare impianti di piste ciclabili e modificare il tipo di data_ini in intero del tipo : 2023"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "738642f9",
    "metadata": {},
    "outputs": [],
