--- a/Scripts/Impianti_sportivi.ipynb
+++ b/Scripts/Impianti_sportivi.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 52,
    "id": "07e73820",
    "metadata": {},
    "outputs": [],
@@ -73,27 +73,113 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b3007536",
+   "metadata": {},
+   "source": [
+    "## ------ MESSAGGIO PER LORENZO -------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0316b242",
+   "metadata": {},
+   "source": [
+    "**Scusa lore se sto cambiando mille volte il codice ma oggi non ragiono!**\n",
+    "Ecco la spiegazione:  \n",
+    " E' molto meglio CREARE da 0 la lista di \"features\" che vogliamo tenere e poi sostituirla\n",
+    " con quella pre-esistente del data, anziché rimuovere con pop da una copia perché\n",
+    " sempre per lo stesso discorso: se eliminiamo degli elementi, anche se in delle copie, poi\n",
+    " gli indici \"i\" tra una lista e l'altra possono non combaciare più:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "30c00d0d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 4\n",
+      "[1, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l1 = [1,2,3,4]\n",
+    "l2 = [1,2,3,4]\n",
+    "for i in range(len(l1)):\n",
+    "    if i == 1 or i == 2:\n",
+    "        l2.pop(i)\n",
+    "print(l1[2], l1[3])\n",
+    "print(l2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94f7ad08",
+   "metadata": {},
+   "source": [
+    "Se noti quello che ci si \"aspettava\" è che i==1 e i == 2 fossero i numeri: 2 e 3 della prima lista e quindi il risultato della seconda fosse una lista che contiene solo [1,4]\n",
+    "Invece il risultato è [1,3] perché:\n",
+    "Nel ciclo di i == 1 viene rimosso effettivamente il numero 2 ma il numero 3 passa dall'indice 2 all'indice 1 e il numero 4 passa dall'indice 3 all'indice 3: -> l1[1,2,3,4] e l2[1,3,4]\n",
+    "Al ciclo i == 2, che per l1 è il numero 3 ma nella l2 è il numero 4!!! e quindi viene rimosso il 4 anziché il 3  \n",
+    "-> l2[1,3] anziché avere l2[1,4]\n",
+    "Spero di essermi spiegato..... per questo è più \"safe\" creare la lista vuota di partenza e inserire solo i valori che vogliamo:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "865faf27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l1 = [1,2,3,4]\n",
+    "l2 = []\n",
+    "for i in range(len(l1)):\n",
+    "    if not (i == 1 or i == 2):  # ho messo not in modo da Inserire tutti tranne quelli (che prima abbiamo invece tolto)\n",
+    "        l2.append(l1[i])\n",
+    "print(l1[2], l1[3])\n",
+    "print(l2)   # Risultato corretto: 1,4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e65e42b",
+   "metadata": {},
+   "source": [
+    "## ------ FINE SPIEGAZIONE ------"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "99e59dc1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_data = data\n",
-    "for i, feature in enumerate(data[\"features\"]):\n",
+    "new_feature = []\n",
+    "for feature in data[\"features\"]:\n",
     "    if feature[\"properties\"][\"data_ini\"]:\n",
-    "        new_data[\"features\"][i][\"properties\"] = {\n",
-    "            \"municipio\": feature[\"properties\"][\"municipio\"],\n",
-    "            \"località\": feature[\"properties\"][\"località\"],\n",
-    "            \"id_impianto\": feature[\"properties\"][\"obj_id\"], \n",
-    "            \"data_ini\": feature[\"properties\"][\"data_ini\"],\n",
-    "            \"area_mq\": feature[\"properties\"][\"area_mq\"],\n",
-    "            \"perim_m\": feature[\"properties\"][\"perim_m\"],\n",
-    "            \"descrizione_codice\": feature[\"properties\"][\"descrizione_codice\"]\n",
-    "        }\n",
-    "    else:\n",
-    "        new_data[\"features\"].pop(i)\n",
-    "data = new_data"
+    "        new_feature.append({\n",
+    "            \"type\": \"Feature\",\n",
+    "            \"properties\":{\n",
+    "                \"municipio\": feature[\"properties\"][\"municipio\"],\n",
+    "                \"località\": feature[\"properties\"][\"località\"],\n",
+    "                \"id_impianto\": feature[\"properties\"][\"obj_id\"], \n",
+    "                \"data_ini\": feature[\"properties\"][\"data_ini\"],\n",
+    "                \"area_mq\": feature[\"properties\"][\"area_mq\"],\n",
+    "                \"perim_m\": feature[\"properties\"][\"perim_m\"],\n",
+    "                \"descrizione_codice\": feature[\"properties\"][\"descrizione_codice\"]\n",
+    "                },\n",
+    "            \"geometry\": feature[\"geometry\"]\n",
+    "            }\n",
+    "        )\n",
+    "data[\"features\"] = new_feature"
    ]
   },
   {
@@ -106,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 56,
    "id": "a93889f5",
    "metadata": {},
    "outputs": [],
