fix impienti con spiegazione per lorenzo

--- a/Scripts/Impianti_sportivi.ipynb
+++ b/Scripts/Impianti_sportivi.ipynb
@@ -149,6 +149,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "db57c688",
+   "metadata": {},
+   "source": [
+    "Quindi qui sotto quello che ho modificato è che inseriamo nella lista new_feature tutte le features che vogliamo tenere:  \n",
+    "--> if feature[\"properties\"][\"data_ini\"]  \n",
+    "Ovviamente inserire una \"features\" significa ricreare esattamente la struttura di una features che è composta da type, properties (solo quelle che vogliamo tenere) e dalla geometry (che rimane invariata)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4e65e42b",
    "metadata": {},
    "source": [
@@ -162,10 +172,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_feature = []\n",
+    "new_features = []\n",
     "for feature in data[\"features\"]:\n",
     "    if feature[\"properties\"][\"data_ini\"]:\n",
-    "        new_feature.append({\n",
+    "        new_features.append({\n",
     "            \"type\": \"Feature\",\n",
     "            \"properties\":{\n",
     "                \"municipio\": feature[\"properties\"][\"municipio\"],\n",
@@ -179,7 +189,7 @@
     "            \"geometry\": feature[\"geometry\"]\n",
     "            }\n",
     "        )\n",
-    "data[\"features\"] = new_feature"
+    "data[\"features\"] = new_features"
    ]
   },
   {
