Fine per ora su inquinamento

--- a/Scripts/Inquinamento.ipynb
+++ b/Scripts/Inquinamento.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 1,
    "id": "af7f82f9",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 2,
    "id": "c89dc7cd",
    "metadata": {},
    "outputs": [],
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 8,
    "id": "ec1dfc77",
    "metadata": {},
    "outputs": [],
@@ -311,14 +311,16 @@
     "\n",
     "df_pm10 = get_tabella_media_inquinanti(2, \"valore_pm10\")\n",
     "df_pm25 = get_tabella_media_inquinanti(3, \"valore_pm25\")\n",
+    "df_NO2 = get_tabella_media_inquinanti(4, \"valore_NO2\")\n",
     "\n",
-    "final_df = df_pm10.merge(df_pm25[[\"nome_stazione\", \"valore_pm25\"]], on=\"nome_stazione\", how=\"left\")\n",
-    "final_df = final_df[[\"valore_pm10\", \"valore_pm25\", \"nome_stazione\", \"latitude\", \"longitute\"]]"
+    "final_df = df_pm10.merge(df_pm25[[\"nome_stazione\", \"valore_pm25\"]], on=\"nome_stazione\", how=\"left\" \\\n",
+    "                         ).merge(df_NO2[[\"nome_stazione\", \"valore_NO2\"]], on=\"nome_stazione\", how=\"left\")\n",
+    "final_df = final_df[[\"valore_pm10\", \"valore_pm25\", \"valore_NO2\", \"nome_stazione\", \"latitude\", \"longitute\"]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 9,
    "id": "05b6a381",
    "metadata": {},
    "outputs": [],
@@ -475,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 1,
    "id": "7cd24381",
    "metadata": {},
    "outputs": [],
@@ -490,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 2,
    "id": "170c6076",
    "metadata": {},
    "outputs": [],
@@ -522,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "id": "c6f47ae2",
    "metadata": {},
    "outputs": [],
@@ -543,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 4,
    "id": "78cac211",
    "metadata": {},
    "outputs": [],
@@ -590,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 5,
    "id": "f2598976",
    "metadata": {},
    "outputs": [
@@ -598,7 +600,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Scraping progress...: 100%|██████████| 19/19 [01:29<00:00,  5.09s/it]"
+      "Scraping progress...: 100%|██████████| 19/19 [01:17<00:00,  4.18s/it]"
      ]
     }
    ],
@@ -633,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "id": "548c45d8",
    "metadata": {},
    "outputs": [],
@@ -660,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 7,
    "id": "f3e11d59",
    "metadata": {},
    "outputs": [],
@@ -691,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 8,
    "id": "99e129f3",
    "metadata": {},
    "outputs": [],
@@ -710,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 15,
    "id": "8e37b0d0",
    "metadata": {},
    "outputs": [],
@@ -720,33 +722,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 16,
    "id": "bb84020e",
    "metadata": {},
    "outputs": [],
    "source": [
     "PATH_INQUINAMENTO_JOINED_CLEAN = \"../Data/Clean/Inquinamento/inquinamento_media_clean.geojson\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fd6ccb8a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "airnet_json = gpd.read_file(PATH_INQUINAMENTO_INGESTION_CLEAN)\n",
-    "amat_json = gpd.read_file(PATH_INQUINANTI_AMAT_GEOJSON_CLEAN)\n",
-    "\n",
-    "amat_json = amat_json.rename(columns={\"valore_pm10\": \"pm10\", \"valore_pm25\": \"pm25\", \"nome_stazione\": \"name\"})\n",
-    "amat_json[\"longitudine\"] = amat_json.apply(lambda row: row[\"geometry\"].x, axis=1)\n",
-    "amat_json[\"latitudine\"] = amat_json.apply(lambda row: row[\"geometry\"].y, axis=1)\n",
-    "column = [\"name\", \"pm10\", \"pm25\", \"longitudine\", \"latitudine\", \"geometry\"]\n",
-    "amat_json = amat_json[column]\n",
-    "airnet_json = airnet_json[column]\n",
-    "\n",
-    "gdf_union = gpd.GeoDataFrame(gpd.pd.concat([airnet_json, amat_json], ignore_index=True))\n",
-    "gdf_union.to_file(PATH_INQUINAMENTO_JOINED_CLEAN, driver=\"GeoJSON\")"
    ]
   }
  ],
