--- a/Scripts/Impianti_sportivi.ipynb
+++ b/Scripts/Impianti_sportivi.ipynb
@@ -210,11 +210,75 @@
     "with open(PATH_IMPIANTI_SPORTIVI_CLEAN, \"w\", encoding=\"utf-8\") as f:\n",
     "    json.dump(data, f, ensure_ascii=False, indent=2)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7d33933",
+   "metadata": {},
+   "source": [
+    "# Script con modifiche in Data e Rimozione dicitura Piste Ciclabili"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb245ed2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "from datetime import datetime\n",
+    "\n",
+    "# Percorsi dei file\n",
+    "PATH_IMPIANTI_SPORTIVI_RAW = \"../Data/Raw/Punti_di_interesse/impianti_sportivi_raw.geojson\"\n",
+    "PATH_IMPIANTI_SPORTIVI_CLEAN = \"../Data/Clean/Punti_di_interesse/impianti_sportivi_clean.geojson\"\n",
+    "\n",
+    "with open(PATH_IMPIANTI_SPORTIVI_RAW, \"r\", encoding=\"utf-8\") as f:\n",
+    "    data = json.load(f)\n",
+    "\n",
+    "new_features = []\n",
+    "for feature in data[\"features\"]:\n",
+    "    props = feature[\"properties\"]\n",
+    "\n",
+    "    # Verifica che esista una data di inizio\n",
+    "    if props[\"data_ini\"]:\n",
+    "        # Controlla che la descrizione non contenga \"pista ciclabile\" (ignorando maiuscole/minuscole)\n",
+    "        descrizione = props[\"descrizione_codice\"].lower()\n",
+    "        if \"pista ciclabile\" not in descrizione:\n",
+    "            try:\n",
+    "                # Estrai solo l'anno dalla data\n",
+    "                anno = datetime.strptime(props[\"data_ini\"], \"%Y-%m-%d\").year\n",
+    "            except:\n",
+    "                anno = None  # In caso di errore nel parsing, ignora\n",
+    "\n",
+    "            # Mantieni solo le righe con anno diverso da 2024\n",
+    "            if anno and anno != 2024:\n",
+    "                # Crea una nuova feature con le proprietà pulite\n",
+    "                new_features.append({\n",
+    "                    \"type\": \"Feature\",\n",
+    "                    \"properties\": {\n",
+    "                        \"municipio\": props[\"municipio\"],\n",
+    "                        \"località\": props[\"località\"],\n",
+    "                        \"id_impianto\": props[\"obj_id\"],\n",
+    "                        \"data_ini\": str(anno),\n",
+    "                        \"area_mq\": props[\"area_mq\"],\n",
+    "                        \"perim_m\": props[\"perim_m\"],\n",
+    "                        \"descrizione_codice\": props[\"descrizione_codice\"]\n",
+    "                    },\n",
+    "                    \"geometry\": feature[\"geometry\"]\n",
+    "                })\n",
+    "\n",
+    "# Sovrascrive le feature nel dizionario con quelle filtrate\n",
+    "data[\"features\"] = new_features\n",
+    "\n",
+    "with open(PATH_IMPIANTI_SPORTIVI_CLEAN, \"w\", encoding=\"utf-8\") as f:\n",
+    "    json.dump(data, f, ensure_ascii=False, indent=2)\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -228,7 +292,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
