conversion con geopandas impianti

--- a/Scripts/Impianti_sportivi.ipynb
+++ b/Scripts/Impianti_sportivi.ipynb
@@ -10,13 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "c142ac72",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "from datetime import datetime"
+    "import geopandas as gpd"
    ]
   },
   {
@@ -50,53 +49,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "eb245ed2",
+   "execution_count": null,
+   "id": "4d22303a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(PATH_IMPIANTI_SPORTIVI_RAW, \"r\", encoding=\"utf-8\") as f:\n",
-    "    data = json.load(f)\n",
+    "gdf = gpd.read_file(PATH_IMPIANTI_SPORTIVI_RAW)\n",
+    "gdf = gdf[[\"municipio\", \"località\", \"obj_id\", \"data_ini\", \"area_mq\", \"perim_m\", \"descrizione_codice\", \"geometry\"]]\n",
+    "gdf = gdf.rename(columns={\"data_ini\": \"anno_inizio\", \"obj_id\": \"id_impianto\"})\n",
     "\n",
-    "new_features = []\n",
-    "for feature in data[\"features\"]:\n",
-    "    props = feature[\"properties\"]\n",
+    "gdf = gdf[gdf[\"anno_inizio\"].notna()].reset_index()\n",
+    "gdf[\"anno_inizio\"] = gdf[\"anno_inizio\"].apply(lambda x: x.year)\n",
     "\n",
-    "    # Verifica che esista una data di inizio\n",
-    "    if props[\"data_ini\"]:\n",
-    "        # Controlla che la descrizione non contenga \"pista ciclabile\" (ignorando maiuscole/minuscole)\n",
-    "        descrizione = props[\"descrizione_codice\"].lower()\n",
-    "        if \"pista ciclabile\" not in descrizione:\n",
-    "            # Convertiamo data da stringa a datetime e preleviamo solo l'anno come intero\n",
-    "            anno = datetime.strptime(props[\"data_ini\"], \"%Y-%m-%d\").year\n",
-    "            # Crea una nuova feature con le proprietà pulite\n",
-    "            new_features.append({\n",
-    "                \"type\": \"Feature\",\n",
-    "                \"properties\": {\n",
-    "                    \"municipio\": props[\"municipio\"],\n",
-    "                    \"località\": props[\"località\"],\n",
-    "                    \"id_impianto\": props[\"obj_id\"],\n",
-    "                    \"anno_inizio\": anno,\n",
-    "                    \"area_mq\": props[\"area_mq\"],\n",
-    "                    \"perim_m\": props[\"perim_m\"],\n",
-    "                    \"descrizione_codice\": props[\"descrizione_codice\"]\n",
-    "                },\n",
-    "                \"geometry\": feature[\"geometry\"]\n",
-    "            })\n",
+    "gdf = gdf[~gdf[\"descrizione_codice\"].str.contains(\"pista ciclabile\", case=False, na=False)].reset_index()\n",
     "\n",
-    "# Sovrascrive le feature nel dizionario con quelle filtrate\n",
-    "data[\"features\"] = new_features"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "fdf6b404",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(PATH_IMPIANTI_SPORTIVI_CLEAN, \"w\", encoding=\"utf-8\") as f:\n",
-    "    json.dump(data, f, ensure_ascii=False, indent=4)"
+    "gdf.to_file(PATH_IMPIANTI_SPORTIVI_CLEAN, driver=\"GeoJSON\")"
    ]
   }
  ],
