refactoring con geopandas di alcuni script

--- a/Scripts/Impianti_sportivi.ipynb
+++ b/Scripts/Impianti_sportivi.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "c142ac72",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "id": "a6faba50",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "4d22303a",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,16 @@
     "gdf[\"anno_inizio\"] = gdf[\"anno_inizio\"].apply(lambda x: x.year)\n",
     "\n",
     "gdf = gdf[~gdf[\"descrizione_codice\"].str.contains(\"pista ciclabile\", case=False, na=False)].reset_index()\n",
-    "\n",
+    "gdf = gdf.drop(columns=[\"level_0\", \"index\"], errors=\"ignore\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "f5aaa795",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "gdf.to_file(PATH_IMPIANTI_SPORTIVI_CLEAN, driver=\"GeoJSON\")"
    ]
   }
