--- a/Scripts/Inquinamento.ipynb
+++ b/Scripts/Inquinamento.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "af7f82f9",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "c89dc7cd",
    "metadata": {},
    "outputs": [],
@@ -477,12 +477,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 53,
    "id": "7cd24381",
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
+    "from io import StringIO\n",
     "\n",
     "import requests\n",
     "from sseclient import SSEClient\n",
@@ -662,30 +663,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "f3e11d59",
+   "execution_count": 54,
+   "id": "28682f84",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(PATH_INQUINAMENTO_INGESTION_RAW, 'r') as file:\n",
-    "    geojson = json.load(file)\n",
-    "features = geojson[\"features\"]\n",
-    "\n",
-    "for feature in geojson[\"features\"]:\n",
-    "    for data in [\"pm10\", \"pm25\"]:\n",
-    "        df = pd.DataFrame(feature[\"properties\"][data])\n",
-    "        df['day'] = pd.to_datetime(df['day'])\n",
-    "        filtered_df = df[df['day'].dt.year.isin([2023])].reset_index()\n",
-    "        if len(filtered_df) > 200:\n",
-    "            media_median = filtered_df[\"median\"].mean()\n",
-    "            feature[\"properties\"][data] = media_median\n",
+    "def set_mean_pm(row):\n",
+    "    for pm in [\"pm10\", \"pm25\"]:\n",
+    "        df = gpd.pd.read_json(StringIO(row[pm]))\n",
+    "        df[\"day\"] = gpd.pd.to_datetime(df[\"day\"])\n",
+    "        df = df[df['day'].dt.year.isin([2023])].reset_index()\n",
+    "        if len(df) > 200:\n",
+    "            row[pm] = df[\"median\"].mean()\n",
     "        else:\n",
-    "            feature[\"properties\"][data] = None"
+    "            row[pm] = None\n",
+    "    return row\n",
+    "\n",
+    "gdf = gpd.read_file(PATH_INQUINAMENTO_INGESTION_RAW)\n",
+    "gdf = gpd.GeoDataFrame(gdf.apply(set_mean_pm, axis=1), geometry=gdf.geometry.name)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d84bf41d",
+   "id": "2fd823e5",
    "metadata": {},
    "source": [
     "Salviamo su Clean"
@@ -693,13 +693,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "99e129f3",
+   "execution_count": 55,
+   "id": "96fbce7f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(PATH_INQUINAMENTO_INGESTION_CLEAN, 'w') as file:\n",
-    "    json.dump(geojson, file, indent=4)"
+    "gdf.to_file(PATH_INQUINAMENTO_INGESTION_CLEAN, driver=\"GeoJSON\")"
    ]
   },
   {
