--- a/Scripts/Info_bici.ipynb
+++ b/Scripts/Info_bici.ipynb
@@ -42,7 +42,7 @@
    "id": "0213b41a",
    "metadata": {},
    "source": [
-    "### ETL (solo conversione di formato)"
+    "### ETL"
    ]
   },
   {
@@ -106,14 +106,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
+    "from shapely import Point\n",
     "\n",
     "import geopandas as gpd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6ec20fe9",
    "metadata": {},
    "outputs": [],
@@ -131,145 +131,42 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "11ce2ba6",
-   "metadata": {},
-   "source": [
-    "Leggiamo il file csv Raw"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0b0107f4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gdf = gpd.read_file(PATH_BIKEMI_RAW, sep = ';')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d7c67153",
-   "metadata": {},
-   "source": [
-    "Rinominiamo alcune colonne"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "336df9bb",
    "metadata": {},
    "outputs": [],
    "source": [
+    "gdf = gpd.read_file(PATH_BIKEMI_RAW, sep = ';')\n",
     "gdf = gdf.rename(columns = {'id_amat':'id_stazione',\n",
     "                           'stalli':'n_posti',\n",
     "                           'LONG_X_4326':'longitudine',\n",
     "                           'LAT_Y_4326': 'latitudine',\n",
-    "                           'Location':'location'})"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c68e6b59",
-   "metadata": {},
-   "source": [
-    "Eliminiamo le colonne che non ci servono"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9580f3e7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gdf.drop(['stato', 'id_via', 'indirizzo', 'civico', 'zd_attuale', 'anno', \"tipo\"], axis=1, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "eaeececd",
-   "metadata": {},
-   "source": [
-    "Aggiungiamo una colonna per l'icona da visualizzare su kepler"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ce2ed705",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "                           'Location':'location'})\n",
+    "gdf.drop(['stato', 'id_via', 'indirizzo', 'civico', 'zd_attuale', 'anno', \"tipo\"], axis=1, inplace=True)\n",
     "gdf['icon'] = \"events\""
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "a7d15c1c",
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "5f449304",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Convertiamo il csv in geojson"
+    "gdf[\"geometry\"] = gdf.apply(lambda row: Point(row['longitudine'], row['latitudine']), axis=1)\n",
+    "gdf = gdf.set_geometry(\"geometry\", crs=4326)\n",
+    "gdf = gdf.drop(columns=\"location\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "dda2b595",
+   "execution_count": 12,
+   "id": "909ac5c3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "geojson = {\n",
-    "    \"type\": \"FeatureCollection\",\n",
-    "    \"name\": \"\",\n",
-    "    \"crs\": {\n",
-    "        \"type\": \"name\",\n",
-    "        \"properties\": {\n",
-    "            \"name\": \"urn:ogc:def:crs:EPSG::6707\"\n",
-    "        }\n",
-    "    },\n",
-    "    \"features\": []\n",
-    "}\n",
-    "geojson[\"name\"] = \"BikeMi_Stazioni\"\n",
-    "for i in gdf.index:\n",
-    "    feature = {\n",
-    "        \"type\": \"Feature\",\n",
-    "        \"properties\": {},\n",
-    "        \"geometry\": {\n",
-    "            \"type\": \"\",\n",
-    "            \"coordinates\": []\n",
-    "            }\n",
-    "        }\n",
-    "    for j in gdf.columns:\n",
-    "        if j == \"location\":\n",
-    "            feature[\"geometry\"][\"type\"] = \"Point\"\n",
-    "            coordinates = gdf.at[i, j].strip(\"(\").strip(\")\").strip().split(\",\")\n",
-    "            feature[\"geometry\"][\"coordinates\"].append(float(coordinates[1]))\n",
-    "            feature[\"geometry\"][\"coordinates\"].append(float(coordinates[0]))\n",
-    "        else:\n",
-    "            feature[\"properties\"][j] = gdf.at[i, j]\n",
-    "    geojson[\"features\"].append(feature)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "eb2c8a24",
-   "metadata": {},
-   "source": [
-    "Salviamo il geojson nei Clean"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6c88e420",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(PATH_BIKEMI_CLEAN, 'w') as file:\n",
-    "    json.dump(geojson, file, indent=4)"
+    "gdf.to_file(PATH_BIKEMI_CLEAN, driver=\"GeoJSON\")"
    ]
   }
  ],
