--- a/Scripts/Punti_di_interesse.ipynb
+++ b/Scripts/Punti_di_interesse.ipynb
@@ -9,6 +9,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "aa9e1892",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from shapely import Point\n",
+    "\n",
+    "import geopandas as gpd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "e4ded582",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#PATH RAW\n",
+    "PATH_MUNICIPI_RAW = \"../Data/Raw/Punti_di_interesse/Municipi/Municipi.shp\"\n",
+    "PATH_PARCHI_RAW = \"../Data/Raw/Punti_di_interesse/Parchi/Parchi_WGS84_Milano_1.shp\"\n",
+    "PATH_FONTANE_RAW = \"../Data/Raw/Punti_di_interesse/fontane_raw.csv\"\n",
+    "\n",
+    "#PATH CLEAN\n",
+    "PATH_MUNICIPI_CLEAN = \"../Data/Clean/Punti_di_interesse/municipi_clean.geojson\"\n",
+    "PATH_PARCHI_CLEAN = \"../Data/Clean/Punti_di_interesse/parchi_clean.geojson\"\n",
+    "PATH_FONTANE_CLEAN = \"../Data/Clean/Punti_di_interesse/fontane_clean.geojson\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "b80e93a3",
    "metadata": {},
@@ -18,61 +48,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "a6e2057f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import fiona\n",
-    "import fiona.transform\n",
-    "import json"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "e4ded582",
+   "id": "36044d24",
    "metadata": {},
    "outputs": [],
    "source": [
-    "PATH_MUNICIPI_RAW = \"../Data/Raw/Punti_di_interesse/Municipi/Municipi.shp\"\n",
-    "PATH_MUNICIPI_JSON = \"../Data/Clean/Punti_di_interesse/municipi_clean.geojson\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0642df14",
-   "metadata": {},
-   "source": [
-    "Carichiamo il file .shp (shape file) e scriviamolo in Clean in formato geojson"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5e165188",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "src_crs = 'EPSG:6707'\n",
-    "dst_crs = 'EPSG:4326'\n",
-    "\n",
-    "with fiona.open(PATH_MUNICIPI_RAW, 'r') as src:\n",
-    "    with fiona.open(PATH_MUNICIPI_JSON, 'w', driver='GeoJSON', crs=src.crs, schema=src.schema) as dst:\n",
-    "        for feature in src:\n",
-    "            feature['geometry'] = fiona.transform.transform_geom(\n",
-    "                src_crs,\n",
-    "                dst_crs,\n",
-    "                feature['geometry']\n",
-    "            )\n",
-    "            dst.write(feature)\n",
-    "\n",
-    "# Solo per una corretta indentazione\n",
-    "with open(PATH_MUNICIPI_JSON, 'r') as file:\n",
-    "    file_json = json.load(file)\n",
-    "\n",
-    "with open(PATH_MUNICIPI_JSON, 'w') as file:\n",
-    "    json.dump(file_json, file, indent=4)"
+    "gdf = gpd.read_file(PATH_MUNICIPI_RAW)\n",
+    "gdf = gdf.to_crs(\"EPSG:4326\")\n",
+    "gdf.to_file(PATH_MUNICIPI_CLEAN)"
    ]
   },
   {
@@ -85,53 +68,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "054c2252",
+   "execution_count": 20,
+   "id": "9383f129",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import fiona\n",
-    "import json"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ce7c2a5d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "PATH_PARCHI_RAW = \"../Data/Raw/Punti_di_interesse/Parchi/Parchi_WGS84_Milano_1.shp\"\n",
-    "PATH_PARCHI_CLEAN = \"../Data/Clean/Punti_di_interesse/parchi_clean.geojson\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "13fa474b",
-   "metadata": {},
-   "source": [
-    "Carichiamo il file .shp (shape file) e scriviamolo in Clean in formato geojson"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ebd47a40",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with fiona.open(PATH_PARCHI_RAW, 'r') as src:\n",
-    "    with fiona.open(PATH_PARCHI_CLEAN, 'w', driver='GeoJSON', crs=src.crs, schema=src.schema) as dst:\n",
-    "        for feature in src:\n",
-    "            if feature[\"geometry\"][\"type\"] == \"Polygon\":\n",
-    "                dst.write(feature)\n",
-    "\n",
-    "# Solo per una corretta indentazione\n",
-    "with open(PATH_PARCHI_CLEAN, 'r') as file:\n",
-    "    file_json = json.load(file)\n",
-    "    \n",
-    "with open(PATH_PARCHI_CLEAN, 'w') as file:\n",
-    "    json.dump(file_json, file, indent=4)"
+    "gdf = gpd.read_file(PATH_PARCHI_RAW)\n",
+    "gdf.to_file(PATH_PARCHI_CLEAN)"
    ]
   },
   {
@@ -140,29 +83,6 @@
    "metadata": {},
    "source": [
     "# Fontane"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3a064f6f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "\n",
-    "import geopandas as gpd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3e7936c8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "PATH_FONTANE_RAW = \"../Data/Raw/Punti_di_interesse/fontane_raw.csv\"\n",
-    "PATH_FONTANE_CLEAN = \"../Data/Clean/Punti_di_interesse/fontane_clean.geojson\""
    ]
   },
   {
@@ -180,115 +100,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = gpd.read_file(PATH_FONTANE_RAW, sep=\";\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f841ce55",
-   "metadata": {},
-   "source": [
-    "Ridenominazione colonne"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "5918b153",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df.rename(columns = {'objectID':'id_fontane',\n",
+    "gdf = gpd.read_file(PATH_FONTANE_RAW, sep=\";\")\n",
+    "gdf[\"Location\"] = gdf[\"Location\"].apply(lambda x: Point((float(x.strip(\"(\").strip(\")\").strip().split(\",\")[1]),\n",
+    "                                                        float(x.strip(\"(\").strip(\")\").strip().split(\",\")[0]))))\n",
+    "gdf = gdf.rename(columns = {'objectID':'id_fontane',\n",
     "                           'MUNICIPIO':'municipio',\n",
     "                           'ID_NIL': 'id_nome',\n",
     "                           'NIL': \"nome\",\n",
     "                           'LONG_X_4326':'longitudine',\n",
     "                           'LAT_Y_4326': 'latitudine',\n",
-    "                           'Location':'location'})"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9b1dbc70",
-   "metadata": {},
-   "source": [
-    "Aggiunta icona per visualizzazione su kepler"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "a98e041b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['icon'] = \"events\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "82fb78d8",
-   "metadata": {},
-   "source": [
-    "Conversione da csv a geojson"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "f1c726c9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "geojson = {\n",
-    "    \"type\": \"FeatureCollection\",\n",
-    "    \"name\": \"\",\n",
-    "    \"crs\": {\n",
-    "        \"type\": \"name\",\n",
-    "        \"properties\": {\n",
-    "            \"name\": \"urn:ogc:def:crs:EPSG::6707\"\n",
-    "        }\n",
-    "    },\n",
-    "    \"features\": []\n",
-    "}\n",
-    "geojson[\"name\"] = \"Fontane\"\n",
-    "for i in df.index:\n",
-    "    feature = {\n",
-    "        \"type\": \"Feature\",\n",
-    "        \"properties\": {},\n",
-    "        \"geometry\": {\n",
-    "            \"type\": \"\",\n",
-    "            \"coordinates\": []\n",
-    "            }\n",
-    "        }\n",
-    "    for j in df.columns:\n",
-    "        if j == \"location\":\n",
-    "            feature[\"geometry\"][\"type\"] = \"Point\"\n",
-    "            coordinates = df.at[i, j].strip(\"(\").strip(\")\").strip().split(\",\")\n",
-    "            feature[\"geometry\"][\"coordinates\"].append(float(coordinates[1]))\n",
-    "            feature[\"geometry\"][\"coordinates\"].append(float(coordinates[0]))\n",
-    "        else:\n",
-    "            feature[\"properties\"][j] = df.at[i, j]\n",
-    "    geojson[\"features\"].append(feature)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "14ba8c6d",
-   "metadata": {},
-   "source": [
-    "Salviamo geojson in Clean"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "48656c49",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(PATH_FONTANE_CLEAN, 'w') as file:\n",
-    "    json.dump(geojson, file, indent=4)"
+    "                           'Location':'geometry'})\n",
+    "gdf['icon'] = \"events\"\n",
+    "gdf = gpd.GeoDataFrame(gdf, geometry=\"geometry\", crs=\"EPSG:4326\")\n",
+    "gdf.to_file(PATH_FONTANE_CLEAN, driver=\"GeoJSON\")"
    ]
   }
  ],
